Fix ad container overflow

--- a/src/containers/Content.css
+++ b/src/containers/Content.css
@@ -146,6 +146,7 @@
   padding: 15px 0;
   text-align: center;
   margin: 10px 0 20px 0;
+  overflow: hidden;
 }
 
 .Content .author-picture img {
